# analytics_system

./: docker-compose.yaml
data_collector/: pyproject.toml
data_collector/app/: main.py
data_collector/app/api/v1/: api.py
data_collector/app/api/v1/endpoints/: events.py
data_collector/app/core/: config.py  kafka.py
data_collector/app/schemas/: event.py
data_collector/app/services/: event_service.py
nginx/: nginx.conf
