[tool.poetry]
name = "data-collector"
version = "0.1.0"
description = ""
authors = ["timofejkazakov <t.kazakov@agora.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.3"
pydantic-settings = "^2.3.1"
fastapi = "^0.111.0"
aiokafka = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
